Initial CLI tool

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "doxme": "^1.4.3"
   },
   "dependencies": {
+    "geojson-stream": "0.0.0",
+    "minimist": "^1.1.1",
     "turf-center": "^1.0.1",
     "turf-distance": "^1.0.0",
     "turf-explode": "^1.0.0",
